--- a/css/common.css
+++ b/css/common.css
@@ -14,6 +14,30 @@
 	font-size: 20px;
 }
 
+.nav .left{
+	float: left;
+	text-align: left;
+	width: 50px;
+}
+.nav .center{
+	float: none;
+	text-align: center;
+	/*width: 200px;*/
+	margin:0 auto;
+}
+.nav .right{
+	float: right;
+	text-align: right;
+	width: 50px;
+}
+
+.logtitlecontent{
+	text-align: center;
+	width: 100%;
+	/*line-height: 50px;*/
+	/*font-size: 20px;*/
+}
+
 .content{
 	position: absolute;
 	margin-top: 320px;
@@ -37,8 +61,17 @@
 }
 
 .calendarimg{
-	position: absolute;
+	/*position: absolute;*/
 	margin-left: 10px;
+	margin-top: 8px;
+	margin-bottom: auto;
+	height: 25px;
+	width: 25px;
+}
+
+.pencilimg{
+	/*position: absolute;*/
+	margin-right: 10px;
 	margin-top: 8px;
 	margin-bottom: auto;
 	height: 25px;
@@ -55,6 +88,25 @@
 	border-style: ridge;
 	border-color: initial;
 	border-width: 1px;
-	-webkit-box-shadow: 2px 2px 5px #DFDFDF;
-	box-shadow: 2px 2px 5px #DFDFDF;
+}
+
+.logback{
+	position: fixed;
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #555555;
+	opacity: 0.75;
+	display: none;
+}
+
+.logcontent{
+	opacity: 1;
+	background-color: #FFFFFF;
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;	
+	margin-top: 60px;
+	height: 310px;
+	border-radius: 5px;
 }
