--- a/css/common.css
+++ b/css/common.css
@@ -101,12 +101,14 @@
 }
 
 .logcontent{
-	opacity: 1;
+	position: fixed;
 	background-color: #FFFFFF;
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;	
 	margin-top: 60px;
 	height: 310px;
+	left: 5%;
 	border-radius: 5px;
+	display: none;
 }
